@@ -10,8 +10,8 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="0.3.0"
-LT_VERSION="0:4:0"
+VERSION="0.3.1"
+LT_VERSION="0:5:0"
 
 UCOMMON_REQUIRES="1.9.7"
 
